# TIBER-Data

./: .gitignore  ARCHITECTURE.md  Procfile  README.md  package.json  pyproject.toml  railway.toml  tsconfig.json
.github/PULL_REQUEST_TEMPLATE/: rookie-import.md
data/: rookies_manifest.csv
data/gold/rookies/: README.md
data/raw/rookies/: README.md
data/rookies/: README.md  artifact-index.json
data/silver/rookies/: README.md
docs/data/: rookie-data-inventory.md  rookies-data-centralization.md
docs/schemas/: player_role_inputs_weekly.md  player_role_profile_compatibility_weekly.md  players.md  team_context_weekly.md  team_opportunity_context_compatibility_weekly.md  teams.md  weekly_player_stats.md  weekly_team_stats.md
scripts/: validate_rookie_inventory.py
src/: api.py  index.ts  main.py
src/config/: settings.py
src/derive/: gold.py
src/ingest/: public.py
src/team_state/: __init__.py  artifact.py  compute.py  consumer.py  contract.py  definitions.py  loader.py
src/transform/: silver.py
src/utils/: frames.py  io.py  validation.py
src/validate/: validateForgeWeeklyPlayerInput.ts  validateRoleOpportunity.ts
team-state/: README.md
team-state/artifacts/: tiber_team_state_v0_1.sample.json
team-state/contracts/: tiber_team_state_v0_1.schema.json
team-state/definitions/: metric_definitions.md
team-state/fixtures/: pbp_fixture.json
team-state/scripts/: generate_tiber_team_state_v0_1.py
test/: forgeWeeklyPlayerInput.v1.test.ts  roleOpportunity.v1.test.ts
tests/: test_api.py
tests/team_state/: test_team_state_v0_1.py
(+12 files in other folders)
