[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiber-data"
version = "0.1.0"
description = "Canonical football data foundation for TIBER downstream modeling repos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nflreadpy>=0.1.0",
  "polars>=1.12.0",
  "pyarrow>=17.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "B"]
